# lambda-screen

./: CNAME  canvasWorker.js  common.js  index.html  main.js  presets.json  readme.md  reductionWorker.js  render.html  script.js  style.css  worker.js
bruijn/: Circle.bruijn  Experiments.bruijn  Screen.bruijn
lambda-screen/: build.sh  lambda-screen.cabal  wasm_jsffi.js
lambda-screen/app/: Main.hs
lambda-screen/src/: Scheduler.hs  Screen.hs  Term.hs
