cabal-version:      3.0
name:               lambda-screen
version:            0.1.0.0
license:            MIT
author:             Marvin Borner
maintainer:         git@marvinborner.de
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    exposed-modules:
        Scheduler
        Screen
        Term
    hs-source-dirs:   src
    build-depends:    base ^>=4.20.0.0
    default-language: Haskell2010

executable lambda-screen
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0
      , lambda-screen
      , OpenGL
      , GLUT
    hs-source-dirs:   app
    default-language: Haskell2010
